--- a/node_server/package.json
+++ b/node_server/package.json
@@ -13,8 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "googleapis": "latest",
     "passport": "latest",
-    "passport-google-oauth": "latest"
+    "passport-google-oauth20": "latest"
   }
 }
