attempted to use nearby api's to send local messages. Running into issues with both how to store the api key and just getting it to succeed

--- a/GarageControlClient/app/src/main/AndroidManifest.xml
+++ b/GarageControlClient/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.nearby.messages.API_KEY"
+            android:value="API_KEY" /> <!-- remember to fill this in on run -->
         <activity
             android:name=".GarageDoorActivity"
             android:label="@string/app_name"
